# ifes_apt_tc_data_modeling

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  README.md  cspell.json  dev-requirements.txt  index.html  linting.sh  mkdocs.yaml  pylintrc.rc  pyproject.toml
.cspell/: custom-dictionary.txt
.github/workflows/: cspell.yml  mkdocs-deploy.yml  publish.yml  pylint.yml  pytest.yml  spellchecker.yml
docs/: index.md
docs/explanation/: learn.md  nxapm.md  provenance.md  suggestions.md
docs/how-tos/: howto.md
docs/tutorial/: compile_docs.md  install_devs.md  install_user.md
examples/: ExamplesForUsersOrDevelopers.ipynb  ParseUlfigReinhardVoylesHDF5.ipynb
explanation/: learn.html  nxapm.html  provenance.html  suggestions.html
ifes_apt_tc_data_modeling/apt/: apt6_headers.py  apt6_reader.py  apt6_sections.py  apt6_sections_branches.py  apt6_utils.py
ifes_apt_tc_data_modeling/ato/: README.md  ato_reader.py
ifes_apt_tc_data_modeling/csv/: README.md  csv_reader.py
ifes_apt_tc_data_modeling/env/: README.md  env_reader.py
ifes_apt_tc_data_modeling/epos/: README.md  epos_reader.py
ifes_apt_tc_data_modeling/fig/: README.md  __init__.py  fig_reader.py
ifes_apt_tc_data_modeling/fig/examples_without_provenance/fau_erlangen_felfer/: 02763-v01.RRNG.fig  02763-v01.RRNG.fig.txt  R04_11350-v01.rng.fig  R04_11350-v01.rng.fig.txt  R04_15208-v04-clip-2_rng.fig  R04_15208-v04-clip-2_rng.fig.txt  R31_06413-v04-roi_rng.fig  R31_06413-v04-roi_rng.fig.txt  R56_02476-v03_rrng.fig  R56_02476-v03_rrng.fig.txt
ifes_apt_tc_data_modeling/imago/: imago_reader.py
ifes_apt_tc_data_modeling/nexus/: nx_field.py  nx_ion.py
ifes_apt_tc_data_modeling/pos/: README.md  pos_reader.py
ifes_apt_tc_data_modeling/pyccapt/: pyccapt_reader.py
ifes_apt_tc_data_modeling/rng/: README.md  rng_reader.py
ifes_apt_tc_data_modeling/rrng/: README.md  __init__.py  rrng_reader.py
ifes_apt_tc_data_modeling/utils/: combinatorics.py  definitions.py  mmapped_io.py  molecular_ions.py  nist_isotope_data.py  string_handling.py  utils.py
ifes_apt_tc_data_modeling/utils/dev/ato/: ato.m
learn/: learn.html  nxapm.html  provenance.html  suggestions.html
search/: search_index.json
src/ifes_apt_tc_data_modeling/: mkdocs.py
src/ifes_apt_tc_data_modeling/analysisset/: README.md  analysisset_reader.py
src/ifes_apt_tc_data_modeling/apt/: README.md  apt6_headers.py  apt6_reader.py  apt6_sections.py  apt6_sections_branches.py  apt6_utils.py
src/ifes_apt_tc_data_modeling/ato/: ato_reader.py
src/ifes_apt_tc_data_modeling/cameca/: README.md  cameca_reader.py  cameca_utils.py
src/ifes_apt_tc_data_modeling/csv/: csv_reader.py
src/ifes_apt_tc_data_modeling/env/: env_reader.py
src/ifes_apt_tc_data_modeling/epos/: epos_reader.py
src/ifes_apt_tc_data_modeling/fig/: README.md  fig_reader.py
src/ifes_apt_tc_data_modeling/fig/matlab/: matlab_fig_to_txt.m
src/ifes_apt_tc_data_modeling/imago/: README.md  imago_reader.py
src/ifes_apt_tc_data_modeling/nexus/: nx_field.py  nx_ion.py
src/ifes_apt_tc_data_modeling/ops/: README.md  ops_reader.py
src/ifes_apt_tc_data_modeling/pos/: pos_reader.py
src/ifes_apt_tc_data_modeling/pyccapt/: README.md  pyccapt_reader.py
src/ifes_apt_tc_data_modeling/rng/: rng_reader.py
src/ifes_apt_tc_data_modeling/rrng/: rrng_reader.py
src/ifes_apt_tc_data_modeling/stuttgart/: README.md  apyt_reader.py  raw_reader.py
src/ifes_apt_tc_data_modeling/utils/: custom_logging.py  default_config.py  definitions.py  hfive.py  memory_mapped_io.py  mmapped_io.py  molecular_ions.py  nx_ion.py  pint_custom_unit_registry.py  utils.py  versioning.py
tests/: TestsForDevelopers.ipynb  test_memory_mapped_io.ipynb  test_utils.py  test_utils_molecular_ions.py  test_utils_string_handling copy.py  test_utils_utils.py  test_utils_utils_molecular_ions.py
tests/data/: TestsForDevelopers.ipynb
tests/data/analysisset/examples_with_provenance/: ZX21-T4.analysisset
tests/data/env/examples_without_provenance/: ErMnO.env
tests/data/fig/examples_without_provenance/ger_erlangen_felfer/: R56_01769.rng.fig.txt
tests/data/imago/examples_without_provenance/: default.analysis  default.analysis.nxs
tests/data/rng/examples_without_provenance/aus_sydney_lafontaine/: 87D_1.rng
tests/data/rng/examples_without_provenance/ger_duesseldorf_kuehbach/: R18_53705-v03.rng  R18_55377-v02.rng  R18_59377.rng  R18_59377_new.rng  R18_60310-v02.rng  SeHoKim_R5076_44076_v02.rng  all02.rng  range_file_RNG.RNG
tests/data/rrng/examples_without_provenance/ger_aachen_saelker/: VAlN_film_plan-view_700C.rrng
tests/data/rrng/examples_without_provenance/ger_berlin_kuehbach/: Ranges_R45_2434-v01.rrng  TiAlN_film_cross-section_850C.rrng
tests/data/rrng/examples_without_provenance/ger_duesseldorf_kuehbach/: Mo_range.rrng  R18_58152-v02.RRNG
tutorial/: compile_docs.html  install_devs.html  install_user.html
