[build-system]
requires = ["setuptools>=78.1.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ifes_apt_tc_data_modeling"
dynamic = ["version"]
authors = [
    { name = "The NOMAD Authors" },
]
description = "Working with file formats and data models in atom probe tomography and related field-ion microscopy (atom probe microscopy)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.6.0",
    "radioactivedecay>=0.4.16",
    "ase>=3.19.0",
    "pandas>=2",
    "pint",
    "numpy",
    "tables",
    "flatdict",
    "xmltodict",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff>=0.14.0",
    "types-xmltodict",
    "types-pyyaml",
    "pandas-stubs",
    "pytest",
    "pre-commit"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-macros-plugin",
    "pymdown-extensions",
    "mkdocs-click"
]
ipynb = [
    "jupyter",
    "jupyterlab",
    "jupyterlab_h5web"
]

[project.urls]
"Homepage" = "https://github.com/atomprobe-tc/ifes_apt_tc_data_modeling"

[tool.setuptools.package-data]
ifes_apt_tc_data_modeling = ["_version.py"]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
write_to = "src/ifes_apt_tc_data_modeling/_version.py"
git_describe_command = ["git", "describe", "--dirty", "--long", "--tags", "--match", "*[0-9]*", "--abbrev=8"]

[tool.ruff]
include = ["src/*.py", "tests/*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
    "UP", # pyupgrade
    "F401", # remove unused import
    "I001", # sort imports
    "NPY201", # upgrade to numpy>2
]
ignore = [
    "E501", # Line too long ({width} > {limit} characters)
    "E701", # Multiple statements on one line (colon)
    "E731", # Do not assign a lambda expression, use a def
    "E402",  # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLW0603", # Using the global statement
    "PLW2901", # redefined-loop-name
    "PLR1714", # consider-using-in
    "PLR5501", # else-if-used
]
fixable = ["ALL"]
isort.split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
disable_error_code = "import, annotation-unchecked"
